--- a/pom.xml
+++ b/pom.xml
@@ -105,19 +105,21 @@
     	<dependency>
             <groupId>org.spicefactory.lib</groupId>
 		    <artifactId>spicelib-reflect</artifactId>
-		    <version>3.1.1-SNAPSHOT</version>
+		    <version>${spicelib.version}</version>
             <type>swc</type>
         </dependency>
+        
         <dependency>
             <groupId>org.spicefactory.lib</groupId>
 		    <artifactId>spicelib-util</artifactId>
-		    <version>3.1.1-SNAPSHOT</version>
+		    <version>${spicelib.version}</version>
             <type>swc</type>
         </dependency>
+        
         <dependency>
             <groupId>org.spicefactory.lib</groupId>
 		    <artifactId>spicelib-commands</artifactId>
-		    <version>3.1.1-SNAPSHOT</version>
+		    <version>${spicelib.version}</version>
             <type>swc</type>
         </dependency>
     </dependencies>
